--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
-    .ancho{
-        width: 100%;
-    }
     /* Estilos correspondientes al menú de navegación*/
     ul {
     list-style-type: none;
@@ -43,7 +40,7 @@
 </head>
 
 <body>
-    <div class="container ancho">
+    <div class="contenedor">
         <div class="row">
             <div class="col-12 bg-primary align-items-center"> 
                 <!-- Cabecera -->
