--- a/index.html
+++ b/index.html
@@ -9,14 +9,27 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
     <style>
+    
+    body {
+        font-family: 'Arvo', serif;
+    }
+    .cabecera {
+        background-color: #e8bc65;
+        padding: 15px;
+        padding-left: 4%;
+    }
+    .menu_navegacion {
+        width: 100%;
+        background-color: #dc982f;
+    }
     /* Estilos correspondientes al menú de navegación*/
     ul {
     list-style-type: none;
-    margin: 10;
-    padding: 10;
+    margin: 1px;
+    padding: 1px;
     overflow: hidden;
-    background-color: #dc982f;
     }
 
     li {
@@ -40,16 +53,19 @@
 </head>
 
 <body>
-    <div class="contenedor">
-        <div class="row">
-            <div class="col-12 bg-primary align-items-center"> 
+    <div class="container-{breakpoint}"> <!-- Contenedor genérico de toda la página-->
+        <div class="cabecera">
+            <div class="row">
+            <div class="col-12 bg-transparent align-items-center"> 
                 <!-- Cabecera -->
                 <img src="./img/logo-abuela.png" alt="Logo Recetas Abuela"/>
+            </div>
             </div>
         </div>
         <div class="row">
             <!-- Menú de navegación-->
-            <div class="col-12 bg-success">
+            <div class="menu_navegacion">
+                <div class="col-12 bg-transparent align-items-center">
                 <ul>
                     <li><a href="ruta" target = "_blank" >Inicio</a></li>
                     <li><a href="ruta" target = "_blank" >Verduras</a></li>
@@ -59,30 +75,70 @@
                     <li><a href="ruta" target = "_blank" >Postres</a></li>
                     <li><a href="ruta" target = "_blank" >Contacto</a></li>  
                   </ul>	
+                </div>
             </div>
         </div>
+        <div class="container-fluid"> <!-- Contenedor que incluye el cuerpo y pie de la página -->
         <div class="row">
             <div class="col-8 bg-success">
                 <!-- Imágenes principal del Slider-->
-                <p>Principal Slider</p>
+                <div class="w3-content" style=display:inline;">
+                    <img class="mySlides" src="img/slide/001.jpg" style="">
+                    <img class="mySlides" src="img/slide/002.jpg" style="display:none">
+                    <img class="mySlides" src="img/slide/003.jpg" style="display:none">
+                    <img class="mySlides" src="img/slide/004.jpg" style="display:none">
+                  </div>
             </div>
             <div class="col-4 bg-primary">
                 <!-- Botones del Slider -->
+                <div class="w3-row-padding w3-section style=" style="max-width:20%""></div>
                 <div class="row">
-                    <div class="col-12">boton 1</div>
+                    <div class="col-12">
+                        <div class="w3-col s4">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/001b.jpg" style="width:225px;cursor:pointer" onclick="currentDiv(1)">
+                      </div></div>
                 </div>
                 <div class="row">
-                    <div class="col-12 bg-success">boton 2</div>
+                    <div class="col-12 bg-success">
+                        <div class="w3-col s4">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/002b.jpg" style="width:225px;cursor:pointer" onclick="currentDiv(2)">
+                      </div></div>
                 </div>
                 <div class="row">
-                    <div class="col-12">boton 3</div>
+                    <div class="col-12">
+                        <div class="w3-col s4">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/003b.jpg" style="width:225px;cursor:pointer" onclick="currentDiv(3)">
+                      </div></div>
                 </div>
                 <div class="row">
-                    <div class="col-12 bg-success">boton 4</div>
+                    <div class="col-12 bg-success"><div class="w3-col s4">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/004b.jpg" style="width:225px;cursor:pointer" onclick="currentDiv(4)">
+                      </div></div>
                 </div>
                 <div class="row">
                     <div class="col-12">boton 5</div>
                 </div>
+                <script>
+                    function currentDiv(n) {
+                      showDivs(slideIndex = n);
+                    }
+                    
+                    function showDivs(n) {
+                      var i;
+                      var x = document.getElementsByClassName("mySlides");
+                      var dots = document.getElementsByClassName("demo");
+                      if (n > x.length) {slideIndex = 1}
+                      if (n < 1) {slideIndex = x.length}
+                      for (i = 0; i < x.length; i++) {
+                        x[i].style.display = "none";
+                      }
+                      for (i = 0; i < dots.length; i++) {
+                        dots[i].className = dots[i].className.replace(" w3-opacity-off", "");
+                      }
+                      x[slideIndex-1].style.display = "block";
+                      dots[slideIndex-1].className += " w3-opacity-off";
+                    }
+                    </script>
             </div>
         </div>
         <div class="row">
@@ -118,6 +174,7 @@
                 Footer
             </div>
         </div>
+    </div>
     </div>
 
     <!-- Optional JavaScript -->
