--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     body {
         font-family: 'Arvo', serif;
     }
+    /* Estilos correspondientes a la cabecera */
     .cabecera {
         background-color: #e8bc65;
         padding: 15px;
@@ -22,15 +23,22 @@
     }
     .imagen-cabecera {
         width: 75%;
+        max-width: 950px;
     }
     .redes-sociales {
-        max-width: 45px;
+        max-width: 50px;
         width: 30%;
     }
     .menu_navegacion {
         width: 100%;
         background-color: #dc982f;
     }
+    /* Estilos de diseño de secciones */
+    h1 {
+        font-family: 'Zhi Mang Xing', cursive;
+        font-size: 35px;
+    }
+
     /* Estilos correspondientes al menú de navegación*/
     ul {
     list-style-type: none;
@@ -61,7 +69,7 @@
 
 <body>
     <div class="container-{breakpoint}"> <!-- Contenedor genérico de toda la página-->
-        <div class="cabecera">
+        <div class="cabecera" class="col-12 bg-transparent">
             <div class="row">
                 <div class="col-10 bg-transparent align-items-center"> 
                     <!-- Cabecera -->
@@ -95,10 +103,11 @@
             <div class="col-8 bg-success">
                 <!-- Imágenes principal del Slider-->
                 <div class="w3-content" style=display:inline;">
-                    <img class="mySlides" src="img/slide/001.jpg" style="">
+                    <img class="mySlides" src="img/recetas/portada.jpg" style="">
                     <img class="mySlides" src="img/slide/002.jpg" style="display:none">
                     <img class="mySlides" src="img/slide/003.jpg" style="display:none">
                     <img class="mySlides" src="img/slide/004.jpg" style="display:none">
+                    <img class="mySlides" src="img/slide/001.jpg" style="display:none">
                   </div>
             </div>
             <div class="col-4 bg-primary">
@@ -107,28 +116,30 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="w3-col s4">
-                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/001b.jpg" style="width:225px;cursor:pointer" onclick="currentDiv(1)">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/verduras.jpg" onclick="currentDiv(1)">
                       </div></div>
                 </div>
                 <div class="row">
                     <div class="col-12 bg-success">
                         <div class="w3-col s4">
-                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/002b.jpg" style="width:225px;cursor:pointer" onclick="currentDiv(2)">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/arroces-pastas.jpg" onclick="currentDiv(2)">
                       </div></div>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         <div class="w3-col s4">
-                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/003b.jpg" style="width:225px;cursor:pointer" onclick="currentDiv(3)">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/carnes.jpg" onclick="currentDiv(3)">
                       </div></div>
                 </div>
                 <div class="row">
                     <div class="col-12 bg-success"><div class="w3-col s4">
-                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/004b.jpg" style="width:225px;cursor:pointer" onclick="currentDiv(4)">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/pescados.jpg" onclick="currentDiv(4)">
                       </div></div>
                 </div>
                 <div class="row">
-                    <div class="col-12">boton 5</div>
+                    <div class="col-12 bg-success"><div class="w3-col s4">
+                        <img class="demo w3-opacity w3-hover-opacity-off" src="img/slide/postres.jpg" onclick="currentDiv(4)">
+                      </div></div>
                 </div>
                 <script>
                     function currentDiv(n) {
@@ -157,7 +168,7 @@
             <div class="col-9 bg-primary">
                 <!-- Sección de novedades-->
                 <section>
-                    <p>Últimas recetas</p>
+                    <p><h1>Últimas recetas</p></h1>
                     <hr>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos officia commodi reprehenderit,
                     ex dolores veritatis temporibus exercitationem iusto soluta amet laborum id sed nobis et ipsum ad
