añadiendo estilos a index con css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <!-- CSS -->
+    <link  rel="stylesheet" type="text/css" href= "css/style.css">
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,60 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
-    <style>
     
-    body {
-        font-family: 'Arvo', serif;
-    }
-    /* Estilos correspondientes a la cabecera */
-    .cabecera {
-        background-color: #e8bc65;
-        padding: 15px;
-        padding-left: 4%;
-    }
-    .imagen-cabecera {
-        width: 75%;
-        max-width: 950px;
-    }
-    .redes-sociales {
-        max-width: 50px;
-        width: 30%;
-    }
-    .menu_navegacion {
-        width: 100%;
-        background-color: #dc982f;
-    }
-    /* Estilos de diseño de secciones */
-    h1 {
-        font-family: 'Zhi Mang Xing', cursive;
-        font-size: 35px;
-    }
-
-    /* Estilos correspondientes al menú de navegación*/
-    ul {
-    list-style-type: none;
-    margin: 1px;
-    padding: 1px;
-    overflow: hidden;
-    }
-
-    li {
-        float: left;
-    }
-
-    li a {
-       display:block;
-       color: black; 
-       text-align: center;
-       padding: 14px 16px;
-       text-decoration: none;
-    }
-
-    li a:hover {
-        font-style: italic;
-        color: grey;
-    }
-    </style>
     <title>Las Recetas de la Abuela</title>
 </head>
 
