cambiando las fotos del slider

--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
             <div class="col-8 bg-success">
                 <!-- Imágenes principal del Slider-->
                 <div class="w3-content" style=display:inline;">
-                    <img class="mySlides" src="img/recetas/portada.jpg" style="">
-                    <img class="mySlides" src="img/slide/002.jpg" style="display:none">
-                    <img class="mySlides" src="img/slide/003.jpg" style="display:none">
+                    <img class="mySlides" src="img/recetas/portada.jpg" style="display:none">
+                    <img class="mySlides" src="img/recetas/Arroz_Empedrado-Murcia.jpg" style="position:absolute">
+                    <img class="mySlides" src="img/recetas/duck-breast-main-dish-fig-parsley.jpg" style="position:absolute">
                     <img class="mySlides" src="img/slide/004.jpg" style="display:none">
                     <img class="mySlides" src="img/slide/001.jpg" style="display:none">
                   </div>
             </div>
             <div class="col-4 bg-primary">
+
                 <!-- Botones del Slider -->
                 <div class="w3-row-padding w3-section style=" style="max-width:20%""></div>
                 <div class="row">
