Reordenación de capas según resolución, HECHO
Reordenación de capas según resolución, HECHO.
Solo se ha modificado el index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="container-fluid"> <!-- Contenedor que incluye el cuerpo y pie de la página -->
         <div class="row">
-            <div class="col-8 bg-success">
+            <div class="col-lg-8 col-md-8 col-xs-12 col-sm-12 bg-success">
                 <!-- Imágenes principal del Slider-->
                 <div class="w3-content" style=display:inline;">
                     <img class="mySlides" src="img/recetas/portada.jpg" style="display:none">
@@ -60,7 +60,7 @@
                     <img class="mySlides" src="img/slide/001.jpg" style="display:none">
                   </div>
             </div>
-            <div class="col-4 bg-primary">
+            <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 bg-primary">
 
                 <!-- Botones del Slider -->
                 <div class="w3-row-padding w3-section style=" style="max-width:20%""></div>
