--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
 <body>
     <div class="container-{breakpoint}"> <!-- Contenedor genérico de toda la página-->
-        <div class="cabecera" class="col-12 bg-transparent">
-            <div class="row">
+        <div class="row cabecera">
                 <div class="col-10 bg-transparent align-items-center"> 
                     <!-- Cabecera -->
                     <img class="imagen-cabecera" src="./img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
@@ -29,7 +28,6 @@
                     <a href="http://www.instagram.com"><img class="redes-sociales" src="./img/instagram.png" alt="Instagram Las Recetas Abuela"/></a>
                     <a href="http://www.twitter.com"><img class="redes-sociales" src="./img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
                     <a href="http://www.facebook.com"><img class="redes-sociales" src="./img/facebook2.png" alt="Facebook Las Recetas Abuela"/></a>
-                </div>
             </div>
         </div>
         <div class="row">
@@ -48,9 +46,11 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid"> <!-- Contenedor que incluye el cuerpo y pie de la página -->
         <div class="row">
+         <!-- Contenedor que incluye el cuerpo y pie de la página -->
+        
             <div class="col-8 bg-success">
+            <!--<div class="col-lg-8 col-md-8 col-xs-12 col-sm-12 bg-success"> -->
                 <!-- Imágenes principal del Slider-->
                 <div class="w3-content" style=display:inline;">
                     <img class="mySlides" src="img/recetas/portada.jpg" style="display:none">
@@ -61,6 +61,7 @@
                   </div>
             </div>
             <div class="col-4 bg-primary">
+            <!--<div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 bg-primary">-->
 
                 <!-- Botones del Slider -->
                 <div class="w3-row-padding w3-section style=" style="max-width:20%""></div>
@@ -148,7 +149,7 @@
                 Footer
             </div>
         </div>
-    </div>
+    
     </div>
 
     <!-- Optional JavaScript -->
