Subida imágenes slide, actualización index.html

--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <a href="./pages/verduras.html">
-                        <img class="d-block w-100 img-responsive" src="./img/recetas/arroz-mixto.jpg" alt="Arroz Mixto"></a>
+                        <img class="d-block w-100 img-responsive" src="./img/slide/verduras.jpg" alt="Verdudas"></a>
                       </div>
                       <div class="carousel-item">
                         <a href="./pages/arroces_y_pastas.html">
-                        <img class="d-block w-100 img-responsive" src="./img/recetas/arroz-con-pollo.jpg" alt="Arroz con pollo"></a>
+                        <img class="d-block w-100 img-responsive" src="./img/slide/arroces-pastas.jpg" alt="Arroces y pastas"></a>
                       </div>
                       <div class="carousel-item">
                         <a href="./pages/carnes.html">
-                        <img class="d-block w-100 img-responsive" src="./img/recetas/pasta.jpg" alt="Pasta"></a>
+                        <img class="d-block w-100 img-responsive" src="./img/slide/carnes.jpg" alt="Carnes"></a>
                       </div>
                       <div class="carousel-item">
                         <a href="./pages/pescados.html">
-                        <img class="d-block w-100 img-responsive" src="./img/recetas/pasta-tagliatelle.jpg" alt="Pasta"></a>
+                        <img class="d-block w-100 img-responsive" src="./img/slide/pescados.jpg" alt="Pescados"></a>
                       </div>
                       <div class="carousel-item">
                         <a href="./pages/postres.html">
-                        <img class="d-block w-100 img-responsive" src="./img/recetas/tortellini.jpg" alt="Pasta"></a>
+                        <img class="d-block w-100 img-responsive" src="./img/slide/postres.jpg" alt="Postres"></a>
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev">
