Subida receta de brocoli y actualización <li> del menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <!-- Tipografía a utilizar Arvo-->
     <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 
     <title>Las Recetas de la Abuela</title>
 </head>
@@ -48,14 +49,14 @@
         <div class="row"> <!-- Este div da inicio al menú -->
             <div class="col-12 menu_navegacion">
                 <div class="col-12 bg-transparent align-items-center">
-                <ul>
-                    <li><a href="ruta" target = "_blank" >Inicio</a></li>
-                    <li><a href="ruta" target = "_blank" >Verduras</a></li>
-                    <li><a href="ruta" target = "_blank" >Arroces y pastas</a></li>
-                    <li><a href="ruta" target = "_blank" >Carnes</a></li>
-                    <li><a href="ruta" target = "_blank" >Pescados</a></li>
-                    <li><a href="ruta" target = "_blank" >Postres</a></li>
-                    <li><a href="ruta" target = "_blank" >Contacto</a></li>  
+                <ul class="ul_menu">
+                    <li class="lista_menu"><a href="index.html" target = "_blank" >Inicio</a></li>
+                    <li class="lista_menu"><a href="./pages/verduras/index.html" target = "_blank" >Verduras</a></li>
+                    <li class="lista_menu"><a href="./pages/arrocesYpastas/index.html" target = "_blank" >Arroces y pastas</a></li>
+                    <li class="lista_menu"><a href="./pages/carnes/index.html" target = "_blank" >Carnes</a></li>
+                    <li class="lista_menu"><a href="./pages/pescados/index.html" target = "_blank" >Pescados</a></li>
+                    <li class="lista_menu"><a href="./pages/postres/index.html" target = "_blank" >Postres</a></li>
+                    <li class="lista_menu"><a href="./pages/contacto.html" target = "_blank" >Contacto</a></li>  
                 </ul>	
                 </div>
             </div>
