--- a/index.html
+++ b/index.html
@@ -1,56 +1,167 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
-   <head>
-	 <title> RecetasAbuela</title>
-	 <meta charset="UTF-8">
-	 <link  rel="stylesheet" type="text/css" href= "css/style.css">
-	 
-	 
-   </head>
-   
-	<body>
-	
-		<header>
-		
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar massa quam. Ut finibus risus non pretium dapibus. Mauris sit amet maximus dolor, 
-		ut imperdiet eros. Duis tristique augue eu est placerat, quis ornare turpis rhoncus. Proin feugiat maximus consequat. Pellentesque bibendum eleifend posuere.
-		Mauris eu congue magna, quis imperdiet urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempus ipsum urna, vel dignissim velit fermentum eu. 
-		Nam blandit volutpat ante vel tincidunt. Sed dignissim, massa in tincidunt elementum, elit tellus pretium nisi, at porta augue nisi eu lectus. Lorem ipsum dolor 
-		sit amet, consectetur adipiscing elit. Aenean eleifend auctor nulla sit amet tempor.
 
-		Sed imperdiet ultricies dapibus. Vivamus ac vulputate mauris. Aliquam id bibendum erat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-		Duis et nulla sed lorem sollicitudin suscipit ac eu arcu. Pellentesque ultrices massa sed justo viverra iaculis. Maecenas sit amet cursus neque. 
-		Maecenas malesuada, mi ut bibendum tincidunt, justo dolor molestie lacus, id condimentum metus ligula sed metus.
-		</header>
-		
-		<ul>
-		
-		  <li><a href="ruta" target = "_blank" >Inicio</a></li>
-		  <li><a href="ruta" target = "_blank" >Verduras</a></li>
-		  <li><a href="ruta" target = "_blank" >Arroces y pastas</a></li>
-		  <li><a href = "ruta" target="_blank" >Carnes</a></li>
-		  <li><a href="ruta" target = "_blank" >Pescados</a></li>
-		  <li><a href="ruta" target = "_blank" >Postres</a></li>
-		  <li><a href="ruta" target = "_blank" >Contacto</a></li>
-		  
-		</ul>		
-		
-		
-		
-		
-		
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		
-		
-		
-	  
-		<footer>
-			<small>
-			<p id = "foot">
-				&copy; RecetasAbuela 
-			</p>
-			</small>
-		</footer>
-	
-	</body>	
-</html>	
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- Tipografía a utilizar Arvo-->
+    <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
+
+    <title>Las Recetas de la Abuela</title>
+</head>
+
+<body>
+    <!-- ocupa el 100% del ancho de la página, bg-primary da el color, py-5 (genera el padding)-->
+    <div class="container-fluid">
+        <!-- Este genera los márgenes respecto al contenido, text-white aplica letra blanca para toda su etiqueta, se podría poner tb a los elementos -->
+        <div class="row"> <!-- Este div da inicio a la cabecera -->
+            <div class="col-9 cabecera py-3">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-9">
+                            <img class="img-fluid" src="./img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
+                        </div>
+                    </div>    
+                </div>
+            </div>
+            <div class="col-3 cabecera py-3"> <!-- Redes Sociales -->
+                <div class="container-fluid"> <!-- contenedor para redes sociales-->
+                    <div class="row">
+                        <div class="col-4">
+                            <a href="http://www.instagram.com" target="_blank"><img class="redes-sociales" src="./img/instagram.png" alt="Instagram Las Recetas Abuela"/></a>
+                        </div>
+                        <div class="col-4">
+                            <a href="https://twitter.com/RecetasAbu" target="_blank" = "_blank"><img class="redes-sociales" src="./img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
+                        </div>
+                        <div class="col-4">
+                            <a href="https://www.facebook.com/profile.php?id=100047956301415" target="_blank"><img class="redes-sociales" src="./img/facebook2.png" alt="Facebook Las Recetas Abuela"/></a>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </div> <!-- este div cierra la cabecera-->
+        <div class="row"> <!-- Este div da inicio al menú -->
+            <div class="col-12 menu_navegacion">
+                <div class="col-12 bg-transparent align-items-center">
+                <ul>
+                    <li><a href="ruta" target = "_blank" >Inicio</a></li>
+                    <li><a href="./pages/verduras/index.html" target = "_blank" >Verduras</a></li>
+                    <li><a href="./pages/arrocesYpastas/index.html" target = "_blank" >Arroces y pastas</a></li>
+                    <li><a href="./pages/carnes/index.html" target = "_blank" >Carnes</a></li>
+                    <li><a href="./pages/pescados/index.html" target = "_blank" >Pescados</a></li>
+                    <li><a href="./pages/postres/index.html" target = "_blank" >Postres</a></li>
+                    <li><a href="./pages/contacto.hmtl" target = "_blank" >Contacto</a></li>  
+                </ul>	
+                </div>
+            </div>
+        </div> <!-- este div cierra el menú-->
+        <div class="row"> <!-- Este div da inicio al slide -->
+                <div id="carousel-1" class="carousel slide slideprincipal" data-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <a href="./pages/verduras.html">
+                        <img class="d-block w-100 img-responsive" src="./img/slide/verduras.jpg" alt="Verdudas"></a>
+                      </div>
+                      <div class="carousel-item">
+                        <a href="./pages/arroces_y_pastas.html">
+                        <img class="d-block w-100 img-responsive" src="./img/slide/arroces-pastas.jpg" alt="Arroces y pastas"></a>
+                      </div>
+                      <div class="carousel-item">
+                        <a href="./pages/carnes.html">
+                        <img class="d-block w-100 img-responsive" src="./img/slide/carnes.jpg" alt="Carnes"></a>
+                      </div>
+                      <div class="carousel-item">
+                        <a href="./pages/pescados.html">
+                        <img class="d-block w-100 img-responsive" src="./img/slide/pescados.jpg" alt="Pescados"></a>
+                      </div>
+                      <div class="carousel-item">
+                        <a href="./pages/postres.html">
+                        <img class="d-block w-100 img-responsive" src="./img/slide/postres.jpg" alt="Postres"></a>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-1" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+        </div> <!-- este div cierra el slide -->
+        <div class="row"> <!-- Este div da inicio al cuerpo -->
+            <div class="col-9">
+                <!-- Sección de novedades-->
+                <section>
+                    <article>
+                        <p><h1 class="h1_cabecera_seccion">Últimas recetas</h1>
+                        <hr>
+                        <h1 class="cabecera_receta">Arroz con pollo</h1>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus soluta ea maxime eos explicabo dignissimos tenetur iste
+                        omnis! Ipsa fugit in minus illum. Sequi voluptatum, excepturi optio enim consequatur provident corrupti nesciunt quis
+                        cumque quibusdam. <a href="receta">Leer más...</a></p>
+                    </article>
+                    <article>
+                        <hr>
+                        <p><h1 class="cabecera_receta">Tallarines a la carbonara</h1>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ab doloribus ea esse inventore magnam mollitia totam
+                        perspiciatis, placeat quia blanditiis repellendus laboriosam, libero fuga rerum. Doloremque vel eveniet minus possimus
+                        tempore totam, rerum provident, illum tempora assumenda ex cumque voluptatum eos? Totam aspernatur repudiandae nesciunt
+                        facere beatae tempora ratione amet incidunt veniam molestias vero, tenetur, quaerat nam neque ut? <a href="receta">Leer más...</a></p>
+                    </article>
+                    <article>
+                        <hr>
+                        <p><h1 class="cabecera_receta">Tarta de queso</h1>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
+                        quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
+                        eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
+                    </article>
+                </section>
+            </div>
+            <div class="col-3">
+                <aside>
+                    <div class="container-fluid"> <!-- Sección Patrocinadores-->
+                        <p>
+                        <h1 class="h1_cabecera_seccion">Patrocinadores</h1>
+                        <hr>
+                        <a href="http://www.flimar.com" target="_blank"><img src="./img/patrocinadores/flimar.png" alt="Supermercado Flimar" class="img-fluid"></a>
+                        <p></p>
+                        <a href="http://www.coviran.es" target="_blank"><img src="./img/patrocinadores/coviran.png" alt="Supermercados Coviran" class="img-fluid"></a>
+                        <p></p>
+                        <a href="http://supermercadospiedra.com/" target="_blank"><img src="./img/patrocinadores/piedra.png" alt="Supermercados Piedra" class="img-fluid"></a>
+                        <p></p>
+                        <a href="http://www.hermanhers.es/" target="_blank"><img src="./img/patrocinadores/hermanHers.jpg" alt="Herman Hers, gallinas de raza" class="img-fluid"></a>
+                        </p>
+                        <hr>
+                        <p>
+                        <h1 class="h1_cabecera_seccion">Puede interesar...</h1>
+                        <hr>
+                    </div>
+                </aside>
+        </div> <!-- este div cierra el cuerpo -->
+    </div> <!-- este div cierra el container fluid principal -->
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="./js/bootstrap.min.js"></script>
+</body>
+<footer>
+    <small>
+    <p id = "foot">
+        &copy; Recetas de la Abuela All Rights Reserved
+    </p>
+    </small>
+</footer>
+
+</html>
