Modificación de menú y añadimos footer

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <div class="col-12 menu_navegacion">
                 <div class="col-12 bg-transparent align-items-center">
                 <ul class="ul_menu">
-                    <li class="lista_menu"><a href="index.html" target = "_blank" >Inicio</a></li>
-                    <li class="lista_menu"><a href="./pages/verduras/index.html" target = "_blank" >Verduras</a></li>
-                    <li class="lista_menu"><a href="./pages/arrocesYpastas/index.html" target = "_blank" >Arroces y pastas</a></li>
-                    <li class="lista_menu"><a href="./pages/carnes/index.html" target = "_blank" >Carnes</a></li>
-                    <li class="lista_menu"><a href="./pages/pescados/index.html" target = "_blank" >Pescados</a></li>
-                    <li class="lista_menu"><a href="./pages/postres/index.html" target = "_blank" >Postres</a></li>
-                    <li class="lista_menu"><a href="./pages/contacto.html" target = "_blank" >Contacto</a></li>  
+                    <li class="lista_menu"><a href="index.html">Inicio</a></li>
+                    <li class="lista_menu"><a href="./pages/verduras/index.html">Verduras</a></li>
+                    <li class="lista_menu"><a href="./pages/arrocesYpastas/index.html">Arroces y pastas</a></li>
+                    <li class="lista_menu"><a href="./pages/carnes/index.html">Carnes</a></li>
+                    <li class="lista_menu"><a href="./pages/pescados/index.html">Pescados</a></li>
+                    <li class="lista_menu"><a href="./pages/postres/index.html">Postres</a></li>
+                    <li class="lista_menu"><a href="./pages/contacto.html">Contacto</a></li>  
                 </ul>	
                 </div>
             </div>
@@ -143,10 +143,18 @@
                         <h1 class="h1_cabecera_seccion">Puede interesar...</h1>
                         <hr>
                     </div>
-                </aside>
-        </div> <!-- este div cierra el cuerpo -->
+                </aside>     
+            </div>
+        </div>
+    </div><!-- este div cierra el cuerpo -->
+    <div class="row"> <!-- Este div da inicio al FOOTER -->
+        <div class="col-12">
+            <footer class="container-fluid cabecera text-center">
+                <p>2020 &copy; Recetas de la Abuela</p>
+            </footer>
+        </div>
+    </div>
     </div> <!-- este div cierra el container fluid principal -->
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -157,5 +165,4 @@
         crossorigin="anonymous"></script>
     <script src="./js/bootstrap.min.js"></script>
 </body>
-
 </html>
