--- a/pages/carnes/index.html
+++ b/pages/carnes/index.html
@@ -55,8 +55,8 @@
                         <li class="lista_menu"><a href="../carnes/index.html">Carnes</a></li>
                         <li class="lista_menu"><a href="../pescados/index.html">Pescados</a></li>
                         <li class="lista_menu"><a href="../postres/index.html">Postres</a></li>
-                        <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>    
-                </ul>	
+                        <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>  
+                    </ul>
                 </div>
             </div>
         </div> <!-- este div cierra el menú-->
@@ -65,18 +65,18 @@
                 <!-- Sección de novedades-->
                 <section>
                     <article>
-                        <p><h1 class="h1_cabecera_seccion">Verduras</h1>
+                        <p><h1 class="h1_cabecera_seccion">Carnes</h1>
                         
-                        <img src="../../img/recetas/verduras/verduras.jpg" alt="verduras" class="img-fluid">
+                        <img src="../../img/recetas/carnes/carnes.jpg" alt="carnes" class="img-fluid">
                         <hr>
-                        <h1 class="cabecera_receta">Brócoli gratinado con jamón</h1>
+                        <h1 class="cabecera_receta">Albóndigas</h1>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus soluta ea maxime eos explicabo dignissimos tenetur iste
                         omnis! Ipsa fugit in minus illum. Sequi voluptatum, excepturi optio enim consequatur provident corrupti nesciunt quis
                         cumque quibusdam. <a href="receta">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Salmorejo de zanahoria</h1>
+                        <p><h1 class="cabecera_receta">Callos</h1>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ab doloribus ea esse inventore magnam mollitia totam
                         perspiciatis, placeat quia blanditiis repellendus laboriosam, libero fuga rerum. Doloremque vel eveniet minus possimus
                         tempore totam, rerum provident, illum tempora assumenda ex cumque voluptatum eos? Totam aspernatur repudiandae nesciunt
@@ -84,14 +84,14 @@
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Tortilla de puerros y espinacas</h1>
+                        <p><h1 class="cabecera_receta">Croquetas</h1>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
                         quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
                         eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
-                        <p><h1 class="cabecera_receta">Tortitas de calabacín</h1>
+                        <p><h1 class="cabecera_receta">Solomillo al Whisky</h1>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
                         quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
                         eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
