--- a/pages/verduras/brocoli_gratinado_con_jamon.html
+++ b/pages/verduras/brocoli_gratinado_con_jamon.html
@@ -49,13 +49,13 @@
             <div class="col-12 menu_navegacion">
                 <div class="col-12 bg-transparent align-items-center">
                     <ul class="ul_menu">
-                        <li class="lista_menu"><a href="index.html" target = "_blank" >Inicio</a></li>
-                        <li class="lista_menu"><a href="../verduras/index.html" target = "_blank" >Verduras</a></li>
-                        <li class="lista_menu"><a href="../arrocesYpastas/index.html" target = "_blank" >Arroces y pastas</a></li>
-                        <li class="lista_menu"><a href="../carnes/index.html" target = "_blank" >Carnes</a></li>
-                        <li class="lista_menu"><a href="../pescados/index.html" target = "_blank" >Pescados</a></li>
-                        <li class="lista_menu"><a href="../postres/index.html" target = "_blank" >Postres</a></li>
-                        <li class="lista_menu"><a href="../contacto.html" target = "_blank" >Contacto</a></li>  
+                        <li class="lista_menu"><a href="index.html">Inicio</a></li>
+                        <li class="lista_menu"><a href="../verduras/index.html">Verduras</a></li>
+                        <li class="lista_menu"><a href="../arrocesYpastas/index.html">Arroces y pastas</a></li>
+                        <li class="lista_menu"><a href="../carnes/index.html">Carnes</a></li>
+                        <li class="lista_menu"><a href="../pescados/index.html">Pescados</a></li>
+                        <li class="lista_menu"><a href="../postres/index.html">Postres</a></li>
+                        <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>  
                     </ul>
                 </div>
             </div>
@@ -147,8 +147,17 @@
                         <hr>
                     </div>
                 </aside>
+                </div>
+            </div>
         </div> <!-- este div cierra el cuerpo -->
-    </div> <!-- este div cierra el container fluid principal -->
+        <div class="row"> <!-- Este div da inicio al FOOTER -->
+            <div class="col-12">
+                <footer class="container-fluid cabecera text-center">
+                    <p>2020 &copy; Recetas de la Abuela</p>
+                </footer>
+            </div>
+        </div>
+    </div><!-- este div cierra el container fluid principal -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
