--- a/pages/pescados/index.html
+++ b/pages/pescados/index.html
@@ -49,7 +49,7 @@
             <div class="col-12 menu_navegacion">
                 <div class="col-12 bg-transparent align-items-center">
                     <ul class="ul_menu">
-                        <li class="lista_menu"><a href="index.html">Inicio</a></li>
+                        <li class="lista_menu"><a href="../../index.html">Inicio</a></li>
                         <li class="lista_menu"><a href="../verduras/index.html">Verduras</a></li>
                         <li class="lista_menu"><a href="../arrocesYpastas/index.html">Arroces y pastas</a></li>
                         <li class="lista_menu"><a href="../carnes/index.html">Carnes</a></li>
