--- a/pages/verduras/index.html
+++ b/pages/verduras/index.html
@@ -121,13 +121,9 @@
             </div>
         </div>
     </div> <!-- este div cierra el cuerpo -->
-    <div class="row"> <!-- Este div da inicio al FOOTER -->
-        <div class="col-12">
-            <footer class="container-fluid cabecera text-center">
-                <p>2020 &copy; Recetas de la Abuela</p>
-            </footer>
-        </div>
-    </div>
+    <footer class="cabecera text-center"> <!-- Inicio footer -->
+        <p>2020 &copy; Recetas de la Abuela</p>
+    </footer> <!-- Fin footer -->
 </div><!-- este div cierra el container fluid principal -->
 
     <!-- Optional JavaScript -->
