Subida de recetas de verduras

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <aside>
                     <div class="container-fluid"> <!-- Sección Patrocinadores-->
                         <p>
-                        <h1 class="h1_cabecera_seccion">Patrocinadores</h1>
+                        <h1 class="h1_cabecera_asside">Patrocinadores</h1>
                         <hr>
                         <a href="http://www.flimar.com" target="_blank"><img src="./img/patrocinadores/flimar.png" alt="Supermercado Flimar" class="img-fluid"></a>
                         <p></p>
@@ -140,7 +140,7 @@
                         </p>
                         <hr>
                         <p>
-                        <h1 class="h1_cabecera_seccion">Puede interesar...</h1>
+                        <h1 class="h1_cabecera_asside">Puede interesar...</h1>
                         <hr>
                     </div>
                 </aside>     
