--- a/pages/verduras/salmorejo_zanahoria.html
+++ b/pages/verduras/salmorejo_zanahoria.html
@@ -24,7 +24,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-9">
-                            <img class="img-fluid" src="../../img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
+                            <img class="img-fluid" src="../..//img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
                         </div>
                     </div>    
                 </div>
@@ -36,7 +36,7 @@
                             <a href="http://www.instagram.com" target="_blank"><img class="redes-sociales" src="../../img/instagram.png" alt="Instagram Las Recetas Abuela"/></a>
                         </div>
                         <div class="col-4">
-                            <a href="https://twitter.com/RecetasAbu" target = "_blank"><img class="redes-sociales" src="../../img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
+                            <a href="https://twitter.com/RecetasAbu" target="_blank" = "_blank"><img class="redes-sociales" src="../../img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
                         </div>
                         <div class="col-4">
                             <a href="https://www.facebook.com/profile.php?id=100047956301415" target="_blank"><img class="redes-sociales" src="../../img/facebook2.png" alt="Facebook Las Recetas Abuela"/></a>
@@ -49,59 +49,84 @@
             <div class="col-12 menu_navegacion">
                 <div class="col-12 bg-transparent align-items-center">
                     <ul class="ul_menu">
-                        <li class="lista_menu"><a href="../../index.html">Inicio</a></li>
+                        <li class="lista_menu"><a href="index.html">Inicio</a></li>
                         <li class="lista_menu"><a href="../verduras/index.html">Verduras</a></li>
                         <li class="lista_menu"><a href="../arrocesYpastas/index.html">Arroces y pastas</a></li>
                         <li class="lista_menu"><a href="../carnes/index.html">Carnes</a></li>
                         <li class="lista_menu"><a href="../pescados/index.html">Pescados</a></li>
                         <li class="lista_menu"><a href="../postres/index.html">Postres</a></li>
                         <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>  
-                    </ul>	
+                    </ul>
                 </div>
             </div>
         </div> <!-- este div cierra el menú-->
         <div class="row"> <!-- Este div da inicio al cuerpo -->
             <div class="col-9">
-                <!-- Sección de novedades-->
+                <!-- Cabecera de recetas-->
                 <section>
                     <article>
-                        <p><h1 class="h1_cabecera_seccion">Arroces y pastas</h1>
+                        <p><h1 class="h1_cabecera_seccion">Salmorejo de zanahoria</h1></p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-6 py-3">
+                                <img src="../../img/recetas/verduras/salmorejo de zanahoria.jpg" class="img-fluid">
+                            </div>
+                            <div class="col-6 py-3">
+                                <h1 class="cabecera_receta">Ingredientes</h1>
+                                <hr>
+                                <ul>
+                                    <li>Zanahorias cocidas al vapor, 500 g (*)</li>
+                                    <li>Aceite de oliva virgen extra, 50 ml</li>
+                                    <li>Zumo de naranja, 100 ml (**)</li>
+                                    <li>Vinagre de manzana, 3 cucharadas</li>
+                                    <li>Ajo, 1 diente</li>
+                                    <li>Agua fría, 100 ml</li>
+                                    <li>Sal al gusto</li> 
+                                    <li>Huevo cocido, 1 para decorar</li>
+                                    <li>Lomo embuchado, 6 lonchas</li>
+                                    <li>Zanahorias en vinagre, para decorar</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h1 class="cabecera_receta">Notas antes de comenzar</h1>
+                        <hr>
+                        <p>(*)Yo lo que hago es cocinarlas por la noche y dejarlas en la nevera hasta el día siguiente.</p>
+                        <p>(**)El zumo de una naranja grande.</p>
+                        <p>Si las zanahorias son muy tiernas se pueden usar crudas, aunque yo prefiero cocinarlas 
+                            un poco al vapor para que luego sean más fáciles de triturar y el salmorejo quede mucho más meloso.</p>
                         
-                        <img src="../../img/recetas/arrocesPastas/arroces-pastas.jpg" alt="arroces y pastas" class="img-fluid">
                         <hr>
-                        <h1 class="cabecera_receta">Arroz mixto</h1>
-                        Lava muy bien la sepia, retírale la piel y las partes internas y córtala en trozos. 
-                        Muchas veces venden las sepias ya arregladas en la pescadería así que si quieres ahorrar tiempo es la mejor opción.
-                        Lava los gambones y déjalos escurriendo junto con la sepia. 
-                        <a href="arrozMixto.html">Leer más...</a></p>
-                    </article>
-                    <article>
+                        <span class="enfasis_recetas">Preparación:</span> 10 min - <span class="enfasis_recetas">Comensales:</span> 3 - 
+                        <span class="enfasis_recetas">Calorías:</span> 223 - <span class="enfasis_recetas">Tipo de comida:</span> Entrante
                         <hr>
-                        <p><h1 class="cabecera_receta">Arroz con pollo</h1>
-                        Pon tu paella a fuego medio (para quien no lo sepa, el recipiente se llama paella, no paellera) con 
-                        aceite de oliva que cubra justo el fondo y dora los trozos de pollo con un poco de sal hasta que queden con 
-                        un toque doradito por todos lados. Yo lo que hago es ir dándoles la vuelta con unas pinzas de cocina, y se tardan 
-                        unos 10 minutos. Reserva en un plato aparte.
-                        <a href="arrozConPollo.html">Leer más...</a></p>
-                    </article>
-                    <article>
+                        <h1 class="cabecera_receta">¡A cocinar!</h1>
                         <hr>
-                        <p><h1 class="cabecera_receta">Tagliatelle carbonara</h1>
-                        Como la elaboración es muy rápida, empieza cociendo la pasta y mientras tienes tiempo para preparar el resto de la receta.
-                        Pon abundante agua a cocer en una olla con una cucharadita de postre de sal y a fuego fuerte.
-                        Cuando hierva el agua echa los tagliatelle y en cuanto hierva el agua de nuevo (tardará muy poco) 
-                        empieza a contar los minutos que indique el paquete. En mi caso han sido 12 minutos.
-                        Cuando esté lista la pasta escúrrela.
-                        <a href="tagliatelleCarbonara.html">Leer más...</a></p>
+                        <p>La verdad es que pasos no hay muchos que dar, pues simplemente tenemos que pelar y cocer 
+                        las zanahorias al vapor durante unos 5 minutos. Si son pequeñas las podemos
+                        cocer enteras, si son grandes las cortamos en trozos.</p>
+
+                        <p>El resto es bien fácil, ponemos en el vaso de la batidora o picadora las zanahorias cocidas,
+                        el zumo de naranja, el diente de ajo pelado, el aceite de oliva virgen extra y el vinagre de manzana. 
+                        Trituramos a velocidad máxima hasta obtener un puré fino y vamos añadiendo agua fría hasta obtener la textura que deseemos. 
+                        A nosotros nos gusta más bien espeso y le ponemos solo 100 ml, pero si se quiere más líquido solo 
+                        hay que ir añadiendo más agua poco a poco.</p>
+
+                        <p>Probamos, rectificamos de vinagre si fuese necesario y añadimos sal al gusto.</p>
+
+                        <p>Para hacer el crujiente de lomo simplemente colocamos las lonchas entre dos hojas de papel de cocina 
+                        absorbente y lo cocinamos en el microondas durante 30-40 segundos a 800 W en función del grosor de las lonchas.</p>
+
+                        <p>Servimos el salmorejo de zanahorias frío, adornado con el crujiente de lomo, un poco de huevo duro picado fino
+                        y unas rodajas de zanahorias en vinagre.</p>
+
+                        <p>Resultado:</p>
+                        <p>Una alternativa al clásico salmorejo de tomate perfecta para poder disfrutar cada día de una 
+                        sopa fría como entrante en los días de calor sin tener que recurrir siempre al gazpacho 
+                        o el salmorejo tradicionales.</p>
+
+                        <p>Por otro lado, la combinación de la zanahoria con la naranja, es un cóctel vitamínico y delicioso perfecto para un día de playa.</p>
                     </article>
-                    <article>
-                        <hr>
-                        <p><h1 class="cabecera_receta">Tortenilli con carrilleras</h1>
-                        Lo ideal es que el relleno de la pasta fresca siempre esté frío en el momento de utilizarlo así que es lo que 
-                        primero hay que preparar. En este caso sigue mi receta de carrilladas o carrilleras de cerdo al vino tinto, que puedes 
-                        elaborar incluso con 1 o 2 días de antelación. Prepara solamenta la mitad de la receta porque necesitarás 4 carrilleras, una por persona.
-                        <a href="tortenilliConCarrilleras.html">Leer más...</a></p>
-                    </article>
+                    
                 </section>
             </div>
             <div class="col-3">
@@ -124,13 +149,17 @@
                         <hr>
                     </div>
                 </aside>
+                </div>
+            </div>
+        </div> <!-- este div cierra el cuerpo -->
+        <div class="row"> <!-- Este div da inicio al FOOTER -->
+            <div class="col-12">
+                <footer class="container-fluid cabecera text-center">
+                    <p>2020 &copy; Recetas de la Abuela</p>
+                </footer>
             </div>
         </div>
-    </div> <!-- este div cierra el cuerpo -->
-    <footer class="cabecera text-center"> <!-- Inicio footer -->
-        <p>2020 &copy; Recetas de la Abuela</p>
-    </footer> <!-- Fin footer -->
-</div><!-- este div cierra el container fluid principal -->
+    </div><!-- este div cierra el container fluid principal -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -142,4 +171,5 @@
         crossorigin="anonymous"></script>
     <script src="../../js/bootstrap.min.js"></script>
 </body>
+
 </html>
