--- a/pages/arrocesYpastas/tagliatelleCarbonara.html
+++ b/pages/arrocesYpastas/tagliatelleCarbonara.html
@@ -24,7 +24,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-9">
-                            <img class="img-fluid" src="../../img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
+                            <img class="img-fluid" src="../..//img/logo-abuela-alargado.png" alt="Logo Recetas Abuela"/>
                         </div>
                     </div>    
                 </div>
@@ -36,7 +36,7 @@
                             <a href="http://www.instagram.com" target="_blank"><img class="redes-sociales" src="../../img/instagram.png" alt="Instagram Las Recetas Abuela"/></a>
                         </div>
                         <div class="col-4">
-                            <a href="https://twitter.com/RecetasAbu" target = "_blank"><img class="redes-sociales" src="../../img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
+                            <a href="https://twitter.com/RecetasAbu" target="_blank" = "_blank"><img class="redes-sociales" src="../../img/twitter.png" alt="Twitter Las Recetas Abuela"/></a>
                         </div>
                         <div class="col-4">
                             <a href="https://www.facebook.com/profile.php?id=100047956301415" target="_blank"><img class="redes-sociales" src="../../img/facebook2.png" alt="Facebook Las Recetas Abuela"/></a>
@@ -56,52 +56,58 @@
                         <li class="lista_menu"><a href="../pescados/index.html">Pescados</a></li>
                         <li class="lista_menu"><a href="../postres/index.html">Postres</a></li>
                         <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>  
-                    </ul>	
+                    </ul>
                 </div>
             </div>
         </div> <!-- este div cierra el menú-->
         <div class="row"> <!-- Este div da inicio al cuerpo -->
             <div class="col-9">
-                <!-- Sección de novedades-->
+                <!-- Cabecera de recetas-->
                 <section>
                     <article>
-                        <p><h1 class="h1_cabecera_seccion">Arroces y pastas</h1>
+                        <p><h1 class="h1_cabecera_seccion">Tagliatelle carbonara</h1></p>
+                        <hr>
+                        <div class="row">
+                            <div class="col-6 py-3">
+                                <img src="../../img/recetas/arrocesPastas/tagliatelle carbonara.jpg" class="img-fluid">
+                            </div>
+                            <div class="col-6 py-3">
+                                <h1 class="cabecera_receta">Ingredientes</h1>
+                                <hr>
+                                <ul>
+                                    <li>500 gr de tagliatelle.</li>
+                                    <li>100 gr de panceta. Lo tradicional es utilizar guanciale pero no suele ser fácil de encontrar.</li>
+                                    <li>3 huevos.</li>
+                                    <li>70 gr de queso parmesano, pecorino o grana padano.</li> 
+                                    <li>Sal y pimienta negra recién molida.</li>
+                                </ul>
+                            </div>
+                        </div>
                         
-                        <img src="../../img/recetas/arrocesPastas/arroces-pastas.jpg" alt="arroces y pastas" class="img-fluid">
                         <hr>
-                        <h1 class="cabecera_receta">Arroz mixto</h1>
-                        Lava muy bien la sepia, retírale la piel y las partes internas y córtala en trozos. 
-                        Muchas veces venden las sepias ya arregladas en la pescadería así que si quieres ahorrar tiempo es la mejor opción.
-                        Lava los gambones y déjalos escurriendo junto con la sepia. 
-                        <a href="arrozMixto.html">Leer más...</a></p>
-                    </article>
-                    <article>
+                        <span class="enfasis_recetas">Preparación:</span> 30 min - <span class="enfasis_recetas">Comensales:</span> 2 - <span class="enfasis_recetas">Tipo de comida:</span> Entrante
                         <hr>
-                        <p><h1 class="cabecera_receta">Arroz con pollo</h1>
-                        Pon tu paella a fuego medio (para quien no lo sepa, el recipiente se llama paella, no paellera) con 
-                        aceite de oliva que cubra justo el fondo y dora los trozos de pollo con un poco de sal hasta que queden con 
-                        un toque doradito por todos lados. Yo lo que hago es ir dándoles la vuelta con unas pinzas de cocina, y se tardan 
-                        unos 10 minutos. Reserva en un plato aparte.
-                        <a href="arrozConPollo.html">Leer más...</a></p>
-                    </article>
-                    <article>
+                        <h1 class="cabecera_receta">¡A cocinar!</h1>
                         <hr>
-                        <p><h1 class="cabecera_receta">Tagliatelle carbonara</h1>
-                        Como la elaboración es muy rápida, empieza cociendo la pasta y mientras tienes tiempo para preparar el resto de la receta.
+                        <p>Como la elaboración es muy rápida, empieza cociendo la pasta y mientras tienes tiempo para preparar el resto de la receta.
                         Pon abundante agua a cocer en una olla con una cucharadita de postre de sal y a fuego fuerte.
                         Cuando hierva el agua echa los tagliatelle y en cuanto hierva el agua de nuevo (tardará muy poco) 
                         empieza a contar los minutos que indique el paquete. En mi caso han sido 12 minutos.
-                        Cuando esté lista la pasta escúrrela.
-                        <a href="tagliatelleCarbonara.html">Leer más...</a></p>
+                        Cuando esté lista la pasta escúrrela.</p>
+                        <p>Mientras se cuece la pasta prepara el resto de la receta para tenerlo todo listo cuando ésta esté cocida.
+                        Corta la panceta en tiritas finas y, en una sartén antiadherente en la que después te quepa toda la pasta, 
+                        saltéala a fuego medio para que se dore ligeramente. Reserva.
+                        En un bol bate los huevos con unas varillas. Ralla el queso parmesano y añádelo al bol junto con un poco 
+                        de pimienta negra molida y sal. Mezcla bien para que se fusione todo.</p>
+
+                        <p>Ahora es cuando viene el verdadero truco para elaborar la perfecta carbonara: cuando los tagliatelle 
+                        estén listos y escurridos, aprovechando que siguen bien calientes tras su cocción, échalos a la sartén 
+                        (que estará fuera del fuego) con la panceta y mezcla durante un minuto. Para este proceso final de mezclar la pasta 
+                        te recomiendo utilizar el típico tenedor grande de pasta ya que eso permite mezclar sin romperlos.
+                        Añade la mezcla de huevos y queso y remueve suavemente para que impregne bien toda la pasta. De esta forma
+                        el propio calor de los espaguetis hará que el huevo se cuaje ligeramente y el resultado quede cremoso pero no crudo.</p>
                     </article>
-                    <article>
-                        <hr>
-                        <p><h1 class="cabecera_receta">Tortenilli con carrilleras</h1>
-                        Lo ideal es que el relleno de la pasta fresca siempre esté frío en el momento de utilizarlo así que es lo que 
-                        primero hay que preparar. En este caso sigue mi receta de carrilladas o carrilleras de cerdo al vino tinto, que puedes 
-                        elaborar incluso con 1 o 2 días de antelación. Prepara solamenta la mitad de la receta porque necesitarás 4 carrilleras, una por persona.
-                        <a href="tortenilliConCarrilleras.html">Leer más...</a></p>
-                    </article>
+                    
                 </section>
             </div>
             <div class="col-3">
@@ -124,13 +130,13 @@
                         <hr>
                     </div>
                 </aside>
+                </div>
             </div>
-        </div>
-    </div> <!-- este div cierra el cuerpo -->
-    <footer class="cabecera text-center"> <!-- Inicio footer -->
-        <p>2020 &copy; Recetas de la Abuela</p>
-    </footer> <!-- Fin footer -->
-</div><!-- este div cierra el container fluid principal -->
+        </div> <!-- este div cierra el cuerpo -->
+        <footer class="cabecera text-center"> <!-- Inicio footer -->
+            <p>2020 &copy; Recetas de la Abuela</p>
+        </footer> <!-- Fin footer -->
+    </div><!-- este div cierra el container fluid principal -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -142,4 +148,5 @@
         crossorigin="anonymous"></script>
     <script src="../../js/bootstrap.min.js"></script>
 </body>
+
 </html>
