--- a/pages/verduras/index.html
+++ b/pages/verduras/index.html
@@ -48,14 +48,14 @@
         <div class="row"> <!-- Este div da inicio al menú -->
             <div class="col-12 menu_navegacion">
                 <div class="col-12 bg-transparent align-items-center">
-                <ul>
-                    <li><a href="ruta" target = "_blank" >Inicio</a></li>
-                    <li><a href="ruta" target = "_blank" >Verduras</a></li>
-                    <li><a href="ruta" target = "_blank" >Arroces y pastas</a></li>
-                    <li><a href="ruta" target = "_blank" >Carnes</a></li>
-                    <li><a href="ruta" target = "_blank" >Pescados</a></li>
-                    <li><a href="ruta" target = "_blank" >Postres</a></li>
-                    <li><a href="ruta" target = "_blank" >Contacto</a></li>  
+                    <ul class="ul_menu">
+                        <li class="lista_menu"><a href="../../index.html">Inicio</a></li>
+                        <li class="lista_menu"><a href="../verduras/index.html">Verduras</a></li>
+                        <li class="lista_menu"><a href="../arrocesYpastas/index.html">Arroces y pastas</a></li>
+                        <li class="lista_menu"><a href="../carnes/index.html">Carnes</a></li>
+                        <li class="lista_menu"><a href="../pescados/index.html">Pescados</a></li>
+                        <li class="lista_menu"><a href="../postres/index.html">Postres</a></li>
+                        <li class="lista_menu"><a href="../contacto.html">Contacto</a></li>    
                 </ul>	
                 </div>
             </div>
@@ -67,34 +67,40 @@
                     <article>
                         <p><h1 class="h1_cabecera_seccion">Verduras</h1>
                         
-                        <img src="verduras.jpg" alt="verduras" class="img-fluid">
+                        <img src="../../img/recetas/verduras/verduras.jpg" alt="verduras" class="img-fluid">
                         <hr>
                         <h1 class="cabecera_receta">Brócoli gratinado con jamón</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus soluta ea maxime eos explicabo dignissimos tenetur iste
-                        omnis! Ipsa fugit in minus illum. Sequi voluptatum, excepturi optio enim consequatur provident corrupti nesciunt quis
-                        cumque quibusdam. <a href="receta">Leer más...</a></p>
+                        Hoy vuelve a tocar una receta de batalla, de las que se pueden preparar a diario 
+                        en poco tiempo sin mucha complicación y que llevan un poco de todo, el brócoli gratinado 
+                        con jamón, queso y huevo. Un plato fácil y rico que es muy socorrido cuando tenemos que intentar que 
+                        otros más reticentes coman algo verde como suele pasar con los más pequeños de la casa. 
+                        <a href="brocoli_gratinado_con_jamon.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
                         <p><h1 class="cabecera_receta">Salmorejo de zanahoria</h1>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ab doloribus ea esse inventore magnam mollitia totam
-                        perspiciatis, placeat quia blanditiis repellendus laboriosam, libero fuga rerum. Doloremque vel eveniet minus possimus
-                        tempore totam, rerum provident, illum tempora assumenda ex cumque voluptatum eos? Totam aspernatur repudiandae nesciunt
-                        facere beatae tempora ratione amet incidunt veniam molestias vero, tenetur, quaerat nam neque ut? <a href="receta">Leer más...</a></p>
+                        La verdad es que pasos no hay muchos que dar, pues simplemente tenemos que pelar y cocer 
+                        las zanahorias al vapor durante unos 5 minutos. Si son pequeñas las podemos
+                        cocer enteras, si son grandes las cortamos en trozos. 
+                        <a href="salmorejo_zanahoria.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
                         <p><h1 class="cabecera_receta">Tortilla de puerros y espinacas</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
-                        quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
-                        eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
+                        Pelamos los puerros y la cebolla, cortamos en puerro en rodajas finas y la cebolla en 
+                        brunoise -trocitos muy pequeños- y los ponemos a pochar a fuego medio (6/12) en una sartén 
+                        con el aceite de oliva virgen extra y una pizca de sal. Cuando empiecen a estar transparentes, 
+                        apartamos un poco y añadimos el diente de ajo “espachurrado” con el prensador de ajos o picado muy fino. 
+                        <a href="tortilla_de_puerros_y_espinacas.html">Leer más...</a></p>
                     </article>
                     <article>
                         <hr>
                         <p><h1 class="cabecera_receta">Tortitas de calabacín</h1>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero debitis saepe at dolore quos laboriosam sed quae dicta,
-                        quo aspernatur qui, culpa error fugiat repudiandae tempore excepturi magni officia numquam? Voluptate ut excepturi
-                        eligendi accusamus animi deleniti facilis, necessitatibus aspernatur.. <a href="receta">Leer más...</a></p>
+                        Lo primero que haremos será pelar el calabacín. A mi me gusta pelarlo enterito, 
+                        pero hay quien también gusta de dejarle unas tiritas de piel o incluso dejarlo entero… eso va en gustos, 
+                        se puede hacer de todas las maneras. Lo que sí es importante, dejes como dejes el calabacín es que lo limpies
+                        bien bien bien debajo del grifo.
+                        <a href="tortilas_de_calabacín.html">Leer más...</a></p>
                     </article>
                 </section>
             </div>
@@ -118,8 +124,13 @@
                         <hr>
                     </div>
                 </aside>
-        </div> <!-- este div cierra el cuerpo -->
-    </div> <!-- este div cierra el container fluid principal -->
+            </div>
+        </div>
+    </div> <!-- este div cierra el cuerpo -->
+    <footer class="cabecera text-center"> <!-- Inicio footer -->
+        <p>2020 &copy; Recetas de la Abuela</p>
+    </footer> <!-- Fin footer -->
+</div><!-- este div cierra el container fluid principal -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -129,14 +140,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-    <script src="./js/bootstrap.min.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
 </body>
-<footer>
-    <small>
-    <p id = "foot">
-        &copy; Recetas de la Abuela All Rights Reserved
-    </p>
-    </small>
-</footer>
-
 </html>
